system/shell/css/_system.gaea.scss
////////////////////////////////////////////////////////////////////////////////// SYSTEM.GAEA/SCSS ///

html, body, .hikari-container, .hikari-pusher, .hikari-content {
	width: 100%; height: 100%;
}

html {
	// background-color: $teal;
	// background: linear-gradient(to top, saturate($black, 100%), darken($teal, 10%));
	// background: linear-gradient(135deg, #b3cae5 12%, #dbdde4 46%, #e4e3e4 70%, #f7ddbb 94%, #efcab2 100%) !important;
	background-color: $dark-gray;
	transition: background 0.5s ease;
}

body {
	@include sans;
	font-size: 11px;
}

.hikari-content { overflow: hidden; }

.hikari-content, .hikari-content-inner { position: relative !important; } //

///////////////////////////////////////////////////////////////////////////////////////////////////////

.button, button {
	margin: 0; padding: 0.5rem 1rem;

	background-repeat: repeat-x;
	border: 1px solid rgba($black, 0.3);
	border-radius: 5px;
	font-weight: 400;
	transition: all 0.2s ease;

	&:hover {
		opacity: 1;
		padding: 0.5rem 1.5rem;
	}
}

/// WINDOW MANAGER ////////////////////////////////////////////////////////////////////////////////////

.wm-space.showcase {
	.wm-window {
		&:hover { box-shadow: 0 0 40px #008; }
	}

	.wm-window.active, .wm-window { transition: top 0.5s ease-out, left 0.5s ease-out; }

	.wm-window.active section.wm-content,
	.wm-window section.wm-content {
		user-select: none;

		-o-user-select: none;
		-moz-user-select: none;
		-webkit-user-select: none;
	}
}

.wm-space.fullscreen {
	.wm-resize { display: none; }
	.wm-window { transition: all 0.5s ease-out; }

	header.wm-window-title {
		background-color: transparent;
		font-size: 40px;
		height: 50px;
		padding: 40px 50px;
		transition: all 0.5s ease-out;

		-o-transition: all 0.5s ease-out;
		-moz-transition: all 0.5s ease-out;
		-webkit-transition: all 0.5s ease-out;

		h1 {
			font-size: 40px;
			transition: all 0.5s ease-out;

			-o-transition: all 0.5s ease-out;
			-moz-transition: all 0.5s ease-out;
			-webkit-transition: all 0.5s ease-out;
		}

		.wm-button-group { display: none; }
	}

	section.wm-content {
		padding: 0 40px;
		transition: all 0.5s ease-out;

		-o-transition: all 0.5s ease-out;
		-moz-transition: all 0.5s ease-out;
		-webkit-transition: all 0.5s ease-out;
	}
}

@keyframes appear {
	0% { transform: scale(0, 0); }
	80% { transform: scale(1.2, 1.2); }
	100% { transform: rotate(1, 1); }
}

@-o-keyframes appear {
	0% { -o-transform: scale(0, 0); }
	80% { -o-transform: scale(1.2, 1.2); }
	100% { -o-transform: rotate(1, 1); }
}

@-moz-keyframes appear {
	0% { -moz-transform: scale(0, 0); }
	80% { -moz-transform: scale(1.2, 1.2); }
	100% { -moz-transform: rotate(1, 1); }
}

@-webkit-keyframes appear {
	0% { -webkit-transform: scale(0, 0); }
	80% { -webkit-transform: scale(1.2, 1.2); }
	100% { -webkit-transform: rotate(1, 1); }
}

@keyframes close {
	0% { transform: scale(1, 1); }
	20% { transform: scale(1.2, 1.2); }
	100% { transform: scale(0, 0); }
}

@-o-keyframes close {
	0% { -o-transform: scale(1, 1); }
	20% { -o-transform: scale(1.2, 1.2); }
	100% { -o-transform: scale(0, 0); }
}

@-moz-keyframes close {
	0% { -moz-transform: scale(1, 1); }
	20% { -moz-transform: scale(1.2, 1.2); }
	100% { -moz-transform: scale(0, 0); }
}

@-webkit-keyframes close {
	0% { -webkit-transform: scale(1, 1); }
	20% { -webkit-transform: scale(1.2, 1.2); }
	100% { -webkit-transform: scale(0, 0); }
}

@keyframes wobbly {
	0% { transform: rotate(4deg); }
	50% { transform: rotate(-4deg); }
	100% { transform: rotate(4deg); }
}

@-o-keyframes wobbly {
	0% { -o-transform: rotate(4deg); }
	50% { -o-transform: rotate(-4deg); }
	100% { -o-transform: rotate(4deg); }
}

@-moz-keyframes wobbly {
	0% { -moz-transform: rotate(4deg); }
	50% { -moz-transform: rotate(-4deg); }
	100% { -moz-transform: rotate(4deg); }
}

@-webkit-keyframes wobbly {
	0% { -webkit-transform: rotate(4deg); }
	50% { -webkit-transform: rotate(-4deg); }
	100% { -webkit-transform: rotate(4deg); }
}
/* ... */

